--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 </div>
             </div>
             <span class="line-seperator"></span>
+        </div>
     </div>
     <!-- Features section end -->
 
@@ -304,5 +305,75 @@
             window.open(url, '_blank');
         }
     </script>
+
+    <!-- contact start -->
+    <div class="contact homepage">
+        <div class="container">
+            <div class="heading">
+                <h3>Feel free to contact us for custom plans</h3>
+                <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Donec sollicitudin molestie malesuada.
+                Donec sollicitudin molue in ipsum</p>
+            </div>
+            <a href="#" class="button">Contact Us</a>
+        </div>
+    </div>
+    <!-- contact end -->
+
+    <!-- footer start -->
+    <footer>
+        <div class="container">
+            <div class="col">
+                <h3>Menu</h3>
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="Services.html">SERVICES</a></li>
+                    <li><a href="pricing.html">PRICING</a></li>
+                    <li><a href="Domain.html">DOMAIN</a></li>
+                    <li><a href="About-Us.html">ABOUT</a></li>
+                    <li><a href="Blog.html">BLOG</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>We Offer</h3>
+                <ul>
+                    <li>BUSINESS HOSTING</li>
+                    <li>PRIVATE HOSTING</li>
+                </ul>
+                <h3>Service</h3>
+                <ul>
+                    <li>FIRST SERVICE</li>
+                    <li>SECOND SERVICE</li>
+                    <li>FIRST SERVICE</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>Our Blog</h3>
+                <h4>Lorem Ipsum sample text</h4>
+                <p>Vivamus suscipit tortor eget felis porttitor
+                volutpat. Curabitur arcu erat, accumsan id
+                imperdiet et, porttitor at sem. Curabitur arcu
+                erat, accumsan.</p>
+                <a href="Blog.html">Read More...</a>
+            </div>
+            <div class="col">
+                <h3>We Are Social</h3>
+                <div class="social">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-google-plus-g"></i></a>
+                    <a href=""><i class="fab fa-youtube"></i></a>
+                    <a href=""><i class="fab fa-skype"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="clouds">
+            <img src="images/Clouds-landing.png" alt="">
+            <img src="images/Mid-Cloud.png" alt="">
+        </div>
+    </footer>
+    <!-- footer end -->
+
+</div>
 </body>
 </html>
