--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                 <div class="contact">
                     <p class="phone">
                         <i class="fas fa-phone-volume"></i>
-                        Call Us: (0) 123 456 789
+                        Call Us: (92) 306 641 5656
                     </p>
                     <p class="email">
                         <i class="far fa-envelope"></i>
-                        jetspace@mail.com
+                        Manzoor76b@gmail.com
                     </p>
                 </div>
                 <div class="lang">
@@ -116,14 +116,13 @@
                 </div>
             </div>
             <div class="content">
-                <p><span>Super fast </span>servers</p>
+                <p><span>BJ Tricks </span>Servers</p>
                 <p>SAFE,FAST AND AWESOME PRICE</p>
-                <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit
-                amet dui. Vestibulum ac diam sit amet quam vehicula</p>
+                <p>BJ Tricks: Your Trusted PHP Script Seller – Offering High-Quality HTML, CSS, and JavaScript Files at Very Cheap Rates. Experience Excellence in Every Purchase!</p>
                 <ul>
-                    <li>Super Special Offer/$2,99/MO</li>
-                    <li>Unlimited Bandwidth and Space</li>
-                    <li>Daily Backups</li>
+                    <li>At BJ Tricks, we provide top-quality PHP, HTML, and</li>
+                    <li>JavaScript files at unbeatable prices. Trust us</li>
+                    <li>for reliable, affordable web solutions!</li>
                 </ul>
             </div>
         </div>
@@ -143,28 +142,24 @@
     <div class="features homepage">
         <div class="container">
             <div class="heading">
-                <h3>We have awesome plans and prices</h3>
-                <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Donec sollicitudin molestie malesuada.
-                Donec sollicitudin molestie malesuada. Pellentesque in ipsum</p>
+                <h3>We Have Awesome Php Html JavaScript Files And Prices</h3>
+                <p>Discover BJ Tricks – The Premier PHP Script Seller You Can Trust. Get Top-Tier HTML, CSS, and JavaScript Solutions at Unbeatable Prices!"</p>
             </div>
             <div class="content">
                 <div class="box">
                     <img src="images/features-1.png" alt="">
                     <h4>Fast Servers</h4>
-                    <p>Curabitur aliquet quam id dui posu
-                    ere blandit.Curabitur ae blandit</p>
+                    <p>Fast and Trusted Services with BJ Tricks – Your Go-To for PHP, HTML, and JavaScript Files</p>
                 </div>
                 <div class="box">
                     <img src="images/features-2.png" alt="">
                     <h4>Fully Support</h4>
-                    <p>Curabitur aliquet quam id dui posu
-                    ere blandit.Curabitur ae blandit</p>
+                    <p>Fully Support BJ Tricks – Your Trusted Seller for PHP, HTML, and JavaScript Files</p>
                 </div>
                 <div class="box">
                     <img src="images/features-3.png" alt="">
                     <h4>Safe and Secure</h4>
-                    <p>Curabitur aliquet quam id dui posu
-                    ere blandit.Curabitur ae blandit</p>
+                    <p>Safe and Secure with BJ Tricks – Your Guarantee for Quality PHP, HTML, and JavaScript Files</p>
                 </div>
             </div>
             <span class="line-seperator"></span>
@@ -178,21 +173,6 @@
             <div class="heading">
                 <h3>Check your domain name</h3>
                 <p>Enter the domain name to register or transfer</p>
-            </div>
-            <form action="">
-                <div class="domain-search">
-                    <input type="search" name="domain-name">
-                    <div class="custom-select">
-                        <select name="domain">
-                            <option value="com">.Com</option>
-                            <option value="net">.Net</option>
-                            <option value="org">.Org</option>
-                            <option value="Biz">.Biz</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="button">
-                    <input type="submit" value="Search Domain">
                 </div>
             </form>
             <div class="plans">
