--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     <div class="domain homepage">
         <div class="container">
             <div class="heading">
-                <h3>Check your domain name</h3>
-                <p>Enter the domain name to register or transfer</p>
+                <h3>Select Your Project What You Want</h3>
+                <p>Check Your Projects – Get Exactly What You Want with BJ Tricks!"</p>
                 </div>
             </form>
             <div class="plans">
@@ -290,7 +290,7 @@
     <div class="contact homepage">
         <div class="container">
             <div class="heading">
-                <h3>Feel free to contact us for custom plans</h3>
+                <h3>Feel Free to Contact Us for Custom Solutions at BJ Tricks!"</h3>
                 <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Donec sollicitudin molestie malesuada.
                 Donec sollicitudin molue in ipsum</p>
             </div>
