--- a/index.html
+++ b/index.html
@@ -291,8 +291,7 @@
         <div class="container">
             <div class="heading">
                 <h3>Feel Free to Contact Us for Custom Solutions at BJ Tricks!"</h3>
-                <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Donec sollicitudin molestie malesuada.
-                Donec sollicitudin molue in ipsum</p>
+                <p>We're Here to Help – No Freebies, Just Genuine Support!</p>
             </div>
             <a href="#" class="button">Contact Us</a>
         </div>
